<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="@android:color/holo_red_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_title"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_hint"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:textSize="16dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_selection_confirmation"/>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/ll_confirm_done"
        android:background="@android:color/holo_red_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/confirm"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>