<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/item_rounded_corners_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_popup_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/select_exam"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_popup_hint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="5dp"
            android:background="@android:color/holo_red_dark"
            android:gravity="center_horizontal"
            android:text="@string/select_exam_hint"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/ll_choose_done"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/choose_button_rounded_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/choose"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

